Поправил статистику.