@@ -3,7 +3,6 @@ package ru.bozhov.waterlevelbot.statistics.controller;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
 import ru.bozhov.waterlevelbot.sensor.model.Sensor;
@@ -25,105 +24,76 @@ public class StatisticsController {
     private final SensorDataRepository sensorDataRepository;
 
     @GetMapping("/statistics")
-    public ModelAndView showStatisticsForm(
-            @RequestParam(value = "sensorName", required = false) String sensorName) {
-        ModelAndView mav = new ModelAndView("statisticsView");
-        if (sensorName == null || sensorName.isEmpty()) {
-            mav.addObject("error", "Параметр sensorName не задан.");
-            return mav;
-        }
-        Optional<Sensor> opt = sensorService.findSensorBySensorName(sensorName);
-        if (opt.isEmpty()) {
-            mav.addObject("error", "Датчик с именем " + sensorName + " не найден.");
-            return mav;
-        }
-        if(!opt.get().getSensorStatus().equals(SensorStatus.GET_DATA)){
-            mav.addObject("error", "Датчик с именем " + sensorName + " не принимает данные.");
-            return mav;
-        }
-        return prepareStatisticsView(opt.get(), "day");
-    }
-
-    @PostMapping("/statistics")
-    public ModelAndView filterStatistics(
+    public ModelAndView statistics(
             @RequestParam("sensorName") String sensorName,
-            @RequestParam("period")     String period) {
-        Optional<Sensor> opt = sensorService.findSensorBySensorName(sensorName);
+            @RequestParam(value = "period", defaultValue = "day") String period) {
+
+        // 1) Один раз создаём MAV и кладём в него параметр sensorName и period
         ModelAndView mav = new ModelAndView("statisticsView");
+        mav.addObject("sensorName", sensorName);
+        mav.addObject("period", period);
+
+        // 2) Проверяем, что датчик существует и в статусе GET_DATA
+        Optional<Sensor> opt = sensorService.findSensorBySensorName(sensorName);
         if (opt.isEmpty()) {
-            mav.addObject("error", "Сенсор с именем " + sensorName + " не найден.");
+            mav.addObject("error", "Сенсор с именем «" + sensorName + "» не найден.");
             return mav;
         }
-        if(!opt.get().getSensorStatus().equals(SensorStatus.GET_DATA)){
-            mav.addObject("error", "Датчик с именем " + sensorName + " не принимает данные.");
+        Sensor sensor = opt.get();
+        if (!SensorStatus.GET_DATA.equals(sensor.getSensorStatus())) {
+            mav.addObject("error", "Сенсор «" + sensorName + "» не принимает данные.");
             return mav;
         }
-        return prepareStatisticsView(opt.get(), period);
+
+        // 3) Дополняем остальными данными и возвращаем тот же MAV
+        return prepareStatisticsView(mav, sensor, period);
     }
 
-    private ModelAndView prepareStatisticsView(Sensor sensor, String period) {
-        ModelAndView mav = new ModelAndView("statisticsView");
-
+    private ModelAndView prepareStatisticsView(ModelAndView mav, Sensor sensor, String period) {
         ZoneId zone = ZoneId.of(sensor.getTimeZone());
-
         ZonedDateTime nowZ = ZonedDateTime.now(zone);
+
+        // Определяем начало отрезка
         ZonedDateTime startZ;
         switch (period.toLowerCase()) {
             case "week":  startZ = nowZ.minusWeeks(1);  break;
             case "month": startZ = nowZ.minusMonths(1); break;
             case "year":  startZ = nowZ.minusYears(1);  break;
-            case "day":
             default:      startZ = nowZ.minusDays(1);   break;
         }
 
-        LocalDateTime now    = nowZ.toLocalDateTime();
-        LocalDateTime start  = startZ.toLocalDateTime();
+        LocalDateTime start = startZ.toLocalDateTime();
+        LocalDateTime now   = nowZ.toLocalDateTime();
 
+        // Загружаем данные
         List<SensorData> data = sensorDataRepository
                 .findBySensorAndLocalDateTimeBetween(sensor, start, now);
+
         if (data.isEmpty()) {
-            mav.addObject("error", "Нет данных для сенсора "
-                    + sensor.getSensorName() + " за выбранный период.");
+            mav.addObject("error",
+                    "Нет данных для сенсора «" + sensor.getSensorName() + "» за выбранный период.");
             return mav;
         }
 
-        // Вычисление медианных значений (float)
-        List<Float> wlValues = data.stream()
-                .map(SensorData::getWaterLevel)
-                .sorted()
-                .collect(Collectors.toList());
-        float medianWL = computeMedian(wlValues);
+        // Считаем медианы и min/max
+        List<Float> wl  = data.stream().map(SensorData::getWaterLevel).sorted().toList();
+        List<Float> tmp = data.stream().map(SensorData::getTemperature)
+                .filter(Objects::nonNull).sorted().toList();
+        List<Float> hum = data.stream().map(SensorData::getHumidity)
+                .filter(Objects::nonNull).sorted().toList();
 
-        List<Float> tempValues = data.stream()
-                .map(SensorData::getTemperature)
-                .filter(Objects::nonNull)
-                .sorted()
-                .collect(Collectors.toList());
-        float medianT = computeMedian(tempValues);
+        mav.addObject("sensorData",         data);
+        mav.addObject("medianWaterLevel",   computeMedian(wl));
+        mav.addObject("maxWaterLevel",      wl.isEmpty()  ? 0f : Collections.max(wl));
+        mav.addObject("minWaterLevel",      wl.isEmpty()  ? 0f : Collections.min(wl));
+        mav.addObject("medianTemperature",  computeMedian(tmp));
+        mav.addObject("maxTemperature",     tmp.isEmpty() ? 0f : Collections.max(tmp));
+        mav.addObject("minTemperature",     tmp.isEmpty() ? 0f : Collections.min(tmp));
+        mav.addObject("medianHumidity",     computeMedian(hum));
+        mav.addObject("maxHumidity",        hum.isEmpty() ? 0f : Collections.max(hum));
+        mav.addObject("minHumidity",        hum.isEmpty() ? 0f : Collections.min(hum));
 
-        List<Float> humValues = data.stream()
-                .map(SensorData::getHumidity)
-                .filter(Objects::nonNull)
-                .sorted()
-                .collect(Collectors.toList());
-        float medianH = computeMedian(humValues);
-
-        mav.addObject("sensorData", data);
-        mav.addObject("medianWaterLevel", medianWL);
-        mav.addObject("maxWaterLevel", wlValues.isEmpty() ? 0f : Collections.max(wlValues));
-        mav.addObject("minWaterLevel", wlValues.isEmpty() ? 0f : Collections.min(wlValues));
-
-        mav.addObject("medianTemperature", medianT);
-        mav.addObject("maxTemperature", tempValues.isEmpty() ? 0f : Collections.max(tempValues));
-        mav.addObject("minTemperature", tempValues.isEmpty() ? 0f : Collections.min(tempValues));
-
-        mav.addObject("medianHumidity", medianH);
-        mav.addObject("maxHumidity", humValues.isEmpty() ? 0f : Collections.max(humValues));
-        mav.addObject("minHumidity", humValues.isEmpty() ? 0f : Collections.min(humValues));
-
-        mav.addObject("sensorName", sensor.getSensorName());
-        mav.addObject("period", period);
-
+        // Текущее время датчика
         String fmt = nowZ.format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss z"));
         mav.addObject("sensorCurrentTime", fmt);
 
@@ -132,11 +102,9 @@ public class StatisticsController {
 
     private float computeMedian(List<Float> list) {
         if (list.isEmpty()) return 0f;
-        int size = list.size();
-        if (size % 2 == 1) {
-            return list.get(size / 2);
-        } else {
-            return (list.get(size / 2 - 1) + list.get(size / 2)) / 2f;
-        }
+        int n = list.size();
+        return (n % 2 == 1)
+                ? list.get(n/2)
+                : (list.get(n/2 - 1) + list.get(n/2)) / 2f;
     }
 }
